--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<hr/>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>- THY -</title>
+	</head>
+	<body>
+		<h1>Hello</h1>
+		<hr>
+		<p>{ empty }</p>
+	</body>
 </html>
