--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>- THY -</title>
-	</head>
-	<body>
-		<h1>Hello</h1>
-		<hr>
-		<p>{ empty }</p>
-	</body>
+<head>
+	<meta charset="utf-8">
+	<title>- THY -</title>
+</head>
+<body>
+	<h1>Hello</h1>
+	<hr>
+	<p>$end$</p>
+</body>
 </html>
