--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>- THY -</title>
+	<title>THY</title>
 </head>
 <body>
-	<h1>Hello</h1>
-	<hr>
-	<p>$end$</p>
+	<p>-{empty}-</p>
 </body>
 </html>
