--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>THY</title>
+	<title>Home Form THY</title>
+	<!-- Font Awesome Icon -->
+	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+	<!-- Global Style -->
+	<link rel="stylesheet" href="./style/global.css">
 </head>
 <body>
-	<p>-{empty}-</p>
+	<div id="app">
+		<div class="nav">
+			<div class="close">
+				<i class="fa fa-close"></i>
+			</div>
+			
+			<div class="link">
+				<a href="#" class="item">HOME</a>
+				<a href="#" class="item">PAGES</a>
+				<a href="#" class="item">DOCUMENTATION</a>
+				<a href="#" class="item">ABOUT</a>
+				
+				<div class="massage">
+					Make with love <br>
+					all that we do.
+				</div>
+			</div>
+		</div>
+		
+		<div class="header"></div>
+		
+		<div class="main"></div>
+	</div>
 </body>
 </html>
